--- a/src/App.css
+++ b/src/App.css
@@ -2,26 +2,23 @@
     font-family: 'FlameBold';
     src: local('FlameBold'), url(./fonts/FlameBold.otf) format('opentype');
 }
+
 @font-face {
     font-family: 'FlameRegular';
     src: local('FlameRegular'), url(./fonts/FlameRegular.otf) format('opentype');
 }
-/* *{
-    font-family: FlameRegular;
-} */
 
 .navabar{
     background-color: #f5ebdc;
     height: 52px;
-    
-   
-    
 }
+
 .sticky-nav{
     position: sticky;
     top: 0;
     z-index: 20;
 }
+
 .logo-nav{
     height: 45px;
     display: flex;
@@ -29,13 +26,16 @@
     width: 50px;
     width: 100%;
 }
+
 .logo-nav img{
     margin-top: .50%;
 }
+
 .button-nav{
     height: 30%;
     margin-top: 1%;
 }
+
 .button-navg{
     display: flex;
     margin-top: .50%;
@@ -44,6 +44,7 @@
     align-items: center;
     gap: 10px; 
  }
+
 .button-navg button{
     border-radius: 16px;
     background-color: #d62300;
@@ -53,30 +54,23 @@
     font: 12px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     font-weight: bold;
 }
+
 .availability{
     height: 52px;
     background-color: #f5ebdc;
     box-shadow: 0 5px 5px -5px #c7c3bd;
-    /* width: 100%; */
 }
-.title{
-    width: 40%;
-}
-.photo{
-    /* width: 60%; */
-    /* padding-right: 50px; */
-}
+
 .photo img{
     height: 383px;
-    width: 650px;
-    /* margin-left: -60px;  */
+    width: 100%;
 }
 .heading-1{
     font-family: FlameBold;
     font-size: 70px;
-    /* font-weight: bold; */
     color: rgb(80, 35, 20);
 }
+
 .button1{
     border-radius: 28px;
     background-color: #d62300;
@@ -87,6 +81,7 @@
     font: 18px Flame-Regular;
     font-weight: bold;
 }
+
 .button2{
     border-radius: 28px;
     color: #d62300;
@@ -97,10 +92,12 @@
     font: 18px Flame-Regular;
     font-weight: bold;
 }
+
 .card-grid{
     border-radius: 28px;
     overflow: hidden;
 }
+
 .card-grid button{
     border-radius: 28px;
     color: #d62300;
@@ -111,20 +108,27 @@
     font: 18px Flame-Regular;
     font-weight: bold;
 }
+
 .botttom-image{
     width: 100%;
     margin-left: 0px;
 }
+.botttom-image img{
+    margin-left:120px;
+    transform: rotate(360deg);
+}
 .bottom-title{
     margin-top: 100px;
-    /* width: 50%; */
-    font-family: Flame-Bold;
+    font-family: sans;
     color: rgb(80, 35, 20);
 }
+
 .bottom-title h1{
     font-size: 50px;
-    font-weight: bold;
+    font-family: FlameBold;
+    
 }
+
 .footer{
     width: 100%;
     height: 50px;
@@ -134,12 +138,56 @@
     padding: 10px;
     font-size: 12px;
 }
-.botttom-image img{
-transform: rotate(360deg);
-}
+
 .title-query{
-    margin-top: 40px;
-    width: 40%;
+    padding-top: 30px;
+    padding-left: 40px;
+}
+.container-body{
+    margin-top:"2px";
+    display:flex;
+    width:100%;
+}
+.container-bottom{
+    padding-top:50px;
+    display:flex;
+}
+.dl-btn{
+    display:flex;
+    gap:20px;
+}
+.container-card{
+    margin-top:20px;
+}
+.cart{
+    width:75px;
+}
+.toggle-nav{
+    margin-top:-40px;
+    padding-left:16px;
+}
+.availability{
+    display:flex;
+    width:100%;
+}
+.loc-query{
+    margin-top:12px;
+    padding-left:16px;
+}
+.loc-icon{
+    font-family:"Flame-Regular";
+    font-size:16px;
+    color:rgb(80, 35, 20);
+    font-weight:bold;
+    padding-top:15px;
+    
+}
+.loc-text{
+    color:rgb(80, 35, 20);
+    font-family:sans;
+    font-size:13px;
+    font-weight:bolder;
+    text-decoration:underline;
 }
 
 @media screen and (max-width:765px){
