--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* fonts */
+
 @font-face {
     font-family: 'FlameBold';
     src: local('FlameBold'), url(./fonts/FlameBold.otf) format('opentype');
@@ -7,6 +9,8 @@
     font-family: 'FlameRegular';
     src: local('FlameRegular'), url(./fonts/FlameRegular.otf) format('opentype');
 }
+
+/* header */
 
 .navabar{
     background-color: #f5ebdc;
@@ -34,18 +38,26 @@
 .button-nav{
     height: 30%;
     margin-top: 1%;
+    background-color:#502314;
+    width:75px;
+    border-radius: 16px;
+    color: white;
+    border: none;
+    height: 34px;
+    font: 12px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    font-weight: bold;
 }
 
 .button-navg{
     display: flex;
     margin-top: .50%;
     margin-top: -36px;
-    margin-right: 5%;
     align-items: center;
     gap: 10px; 
+    float: right;
  }
 
-.button-navg button{
+.sign-btn{
     border-radius: 16px;
     background-color: #d62300;
     color: white;
@@ -59,12 +71,46 @@
     height: 52px;
     background-color: #f5ebdc;
     box-shadow: 0 5px 5px -5px #c7c3bd;
+    display:flex;
+    width:100%;
 }
+
+.loc-query{
+    margin-top:22px;
+    padding-left:16px;
+}
+
+.loc-icon{
+    font-family:"Flame-Regular";
+    font-size:16px;
+    color:rgb(80, 35, 20);
+    font-weight:bold;
+    padding-top:15px;
+    margin-top:10px;
+    padding-left:6px;
+    
+}
+
+.loc-text{
+    color:rgb(80, 35, 20);
+    font-family:sans;
+    font-size:13px;
+    font-weight:bolder;
+    text-decoration:underline;
+}
+
+.nav-menu{
+    margin-top:-40px;
+    padding-left:16px;
+}
+
+/* body */
 
 .photo img{
     height: 383px;
-    width: 100%;
+    max-width: 100%;
 }
+
 .heading-1{
     font-family: FlameBold;
     font-size: 70px;
@@ -93,6 +139,13 @@
     font-weight: bold;
 }
 
+.title-query{
+    padding-top: 30px;
+    padding-left: 40px;
+}
+
+/* grid */
+
 .card-grid{
     border-radius: 28px;
     overflow: hidden;
@@ -109,14 +162,22 @@
     font-weight: bold;
 }
 
+.container-card{
+    margin-top:20px;
+}
+
+/* bottom section */
+
 .botttom-image{
     width: 100%;
     margin-left: 0px;
 }
+
 .botttom-image img{
     margin-left:120px;
     transform: rotate(360deg);
 }
+
 .bottom-title{
     margin-top: 100px;
     font-family: sans;
@@ -126,8 +187,19 @@
 .bottom-title h1{
     font-size: 50px;
     font-family: FlameBold;
-    
 }
+
+.container-bottom{
+    padding-top:50px;
+    display:flex;
+}
+
+.dl-btn{
+    display:flex;
+    gap:20px;
+}
+
+/* footer section */
 
 .footer{
     width: 100%;
@@ -139,71 +211,25 @@
     font-size: 12px;
 }
 
-.title-query{
-    padding-top: 30px;
-    padding-left: 40px;
-}
-.container-body{
-    margin-top:"2px";
-    display:flex;
-    width:100%;
-}
-.container-bottom{
-    padding-top:50px;
-    display:flex;
-}
-.dl-btn{
-    display:flex;
-    gap:20px;
-}
-.container-card{
-    margin-top:20px;
-}
-.cart{
-    width:75px;
-}
-.toggle-nav{
-    margin-top:-40px;
-    padding-left:16px;
-}
-.availability{
-    display:flex;
-    width:100%;
-}
-.loc-query{
-    margin-top:12px;
-    padding-left:16px;
-}
-.loc-icon{
-    font-family:"Flame-Regular";
-    font-size:16px;
-    color:rgb(80, 35, 20);
-    font-weight:bold;
-    padding-top:15px;
-    
-}
-.loc-text{
-    color:rgb(80, 35, 20);
-    font-family:sans;
-    font-size:13px;
-    font-weight:bolder;
-    text-decoration:underline;
-}
+/* media queries */
 
 @media screen and (max-width:765px){
-    .cart{
+    .button-nav{
         display: none;
     }
     .bottom-title{
         margin-top: 0px;
     }
-    .loc-query{
+    .availability{
         display: none;
     }
     
 }
 @media screen and (max-width:765px)and (min-width:445px) {
     .title-query{
-        margin-left: 80px;
-}
+        margin-left: 60px;
+    }
+    .photo img{
+        margin-left: 60px;
+    }
 }
